# sprites-py

./: .gitignore  README.md  pyproject.toml  test-cli
.github/workflows/: publish.yml
examples/: checkpoint_create.py  checkpoint_get.py  checkpoint_list.py  checkpoint_restore.py  exec.py  policy_get.py  policy_set.py  quickstart.py  service_create.py  service_get.py  service_list.py  service_start.py  service_stop.py  session_attach.py  session_list.py  sprite_create.py  sprite_destroy.py  sprite_get.py  sprite_list.py  sprite_update.py
src/sprites/: __init__.py  checkpoint.py  client.py  control.py  exceptions.py  exec.py  loop.py  sprite.py  types.py  websocket.py
test_cli/: __init__.py  main.py
tests/: conftest.py  test_control.py  test_exceptions.py  test_websocket.py
