[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sprites"
version = "0.1.0"
description = "Python SDK for Sprites - remote command execution platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Fly.io", email = "support@fly.io" }
]
keywords = ["sprites", "exec", "remote", "command", "websocket", "subprocess"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "websockets>=12.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.8",
    "ruff>=0.3",
]

[project.urls]
Homepage = "https://github.com/superfly/sprites-python"
Documentation = "https://github.com/superfly/sprites-python#readme"
Repository = "https://github.com/superfly/sprites-python.git"

[tool.hatch.build.targets.wheel]
packages = ["src/sprites"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
